--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
 	<meta charset="utf-8">
 	<title>Tugas Kelompok J42</title>
-	<link rel="stylesheet" type="text/css" href="CSS/stylesheet.css">
-	<link rel="stylesheet" type="text/css" href="CSS/responssive.css">
+	<link rel="stylesheet" type="text/css" href="stylesheet.css">
+	<link rel="stylesheet" type="text/css" href="responssive.css">
 	<script src="https://kit.fontawesome.com/a076d05399.js"></script>
 	<style>
 		body {
